--- a/road_training_v2.ipynb
+++ b/road_training_v2.ipynb
@@ -9,8 +9,9 @@
         "KR3yLf7sjii_",
         "08NASCX6k4Hp"
       ],
+      "toc_visible": true,
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyPaV80kGA03lFYziKBjVBAp",
+      "authorship_tag": "ABX9TyMIkWV8vYuuFgjmuHTcKGqj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -565,97 +566,6 @@
         "  return input_image,output_image"
       ],
       "execution_count": 46,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "08NASCX6k4Hp"
-      },
-      "source": [
-        "### TO BE DELETED"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zLj9JQx9T0jO"
-      },
-      "source": [
-        "\n",
-        "# def tf_parse(x, y):\n",
-        "#     def _parse(x_path, y_path):\n",
-        "#       x_path = x_path.decode()\n",
-        "#       x = cv2.imread(x_path, cv2.IMREAD_COLOR)\n",
-        "#       y_path = y_path.decode()\n",
-        "#       y = cv2.imread(y_path, cv2.IMREAD_GRAYSCALE)\n",
-        "      \n",
-        "#       #### randomly flip images\n",
-        "#       flip_p = random.uniform(0, 1)\n",
-        "#       if (flip_p > 0.75) : \n",
-        "#         # flipping vertically\n",
-        "#         x = numpy.array(list(reversed(x)))\n",
-        "#         y = numpy.array(list(reversed(y)))\n",
-        "#       if (flip_p < 0.25) : \n",
-        "#         # flipping horizontally\n",
-        "#         x = numpy.array([list(reversed(row)) for row in x])\n",
-        "#         y = numpy.array([list(reversed(row)) for row in y])\n",
-        "#       ### Cropping image\n",
-        "#       img_height = MOBILENET_IMG_SIZE\n",
-        "#       img_width = MOBILENET_IMG_SIZE\n",
-        "#       num_splits = math.floor((y.shape[0]*y.shape[1])/(img_width*img_height))\n",
-        "#       # counter = 0\n",
-        "#       cropped_flag = 0 \n",
-        "#       while (cropped_flag == 1):\n",
-        "#         r = random.randint(0,y.shape[1]-img_height)\n",
-        "#         c = random.randint(0,y.shape[0]-img_width)\n",
-        "#       # for r in range(0,y.shape[1],img_height):\n",
-        "#       #   if cropped_flag == 1:\n",
-        "#       #     break\n",
-        "#       #   for c in range (0,y.shape[0],img_width):\n",
-        "#       #     counter += 1\n",
-        "#           # blank image and mask\n",
-        "#         blank_image = np.zeros((img_height ,img_width, 3), dtype = int)\n",
-        "#         blank_mask = np.zeros((img_height ,img_width), dtype = int)\n",
-        "#         # new image and mask\n",
-        "#         new_image = np.array(x[r:r+img_height, c:c+img_width,:])\n",
-        "#         new_mask = np.array(y[r:r+img_height, c:c+img_width])\n",
-        "\n",
-        "#         blank_image[:new_image.shape[0], :new_image.shape[1], :] += new_image\n",
-        "#         blank_mask[:new_image.shape[0], :new_image.shape[1]] += new_mask\n",
-        "\n",
-        "#         blank_mask[blank_mask>1] = 255\n",
-        "\n",
-        "#         # Skip any Image that is more than 99% empty.\n",
-        "#         if np.any(blank_mask):\n",
-        "#           num_black_pixels, num_white_pixels = np.unique(blank_mask, return_counts=True)[1]\n",
-        "          \n",
-        "#           if num_white_pixels/num_black_pixels < 0.01:\n",
-        "#             continue\n",
-        "          \n",
-        "#           x = blank_image\n",
-        "#           y = blank_mask\n",
-        "#           cropped_flag = 1\n",
-        "#           break\n",
-        "        \n",
-        "#       x = x/255.0\n",
-        "#       y = y/255.0\n",
-        "#       y = np.expand_dims(y, axis=-1)\n",
-        "\n",
-        "#       return x, y\n",
-        "\n",
-        "#     x, y = tf.numpy_function(_parse, [x, y], [tf.float64, tf.float64])\n",
-        "#     # x, y = tf.py_function(_parse, [x, y], [tf.float64, tf.float64])\n",
-        "#     return x, y\n",
-        "\n",
-        "# def tf_dataset(x, y, batch=8):\n",
-        "#     dataset = tf.data.Dataset.from_tensor_slices((x, y))\n",
-        "#     dataset = dataset.map(tf_parse)\n",
-        "#     # dataset = dataset.batch(batch)\n",
-        "#     # dataset = dataset.repeat()\n",
-        "#     return dataset"
-      ],
-      "execution_count": 47,
       "outputs": []
     },
     {
